Add links that require router for pictures to stories.

--- a/templates/posts.hbs
+++ b/templates/posts.hbs
@@ -1,9 +1,9 @@
 <div class='container'>
   <h3>Bustle Link Page</h3>
   <ul>
-    <li><a href='#'>Headline 1<img src="css/images/cow-fire-man.jpg"></a></li>
-    <li><a href='#'>Headline 2<img src="css/images/helicopter.jpg"></a></li>
-    <li><a href='#'>Headline 3<img src="css/images/joe-cool.jpg"></a></li>
-    <li><a href='#'>Headline 4<img src="css/images/lion.jpg"></a></li>
+    <li>{{#link-to 'headline1'}}Headline 1<img src="css/images/cow-fire-man.jpg">{{/link-to}}</li>
+    <li>{{#link-to 'headline2'}}Headline 2<img src="css/images/helicopter.jpg">{{/link-to}}</li>
+    <li>{{#link-to 'headline3'}}Headline 3<img src="css/images/joe-cool.jpg">{{/link-to}}</li>
+    <li>{{#link-to 'headline4'}}Headline 4<img src="css/images/lion.jpg">{{/link-to}}</li>
   </ul>
 </div>
