--- a/templates/posts.hbs
+++ b/templates/posts.hbs
@@ -1,9 +1,66 @@
 <div class='container'>
   <h3>Bustle Link Page</h3>
-  <ul>
-    <li>{{#link-to 'headline1'}}Headline 1<img src="css/images/cow-fire-man.jpg">{{/link-to}}</li>
-    <li>{{#link-to 'headline2'}}Headline 2<img src="css/images/helicopter.jpg">{{/link-to}}</li>
-    <li>{{#link-to 'headline3'}}Headline 3<img src="css/images/joe-cool.jpg">{{/link-to}}</li>
-    <li>{{#link-to 'headline4'}}Headline 4<img src="css/images/lion.jpg">{{/link-to}}</li>
-  </ul>
+
+  <div id="myCarousel" class="carousel slide" data-interval= '5000' data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="active item">
+        {{#link-to 'headline1'}}Headline 1<img src="css/images/cow-fire-man.jpg">{{/link-to}}
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>THE COW MAN IS LOOSE!</h1>
+            <p>Better read fast.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="item">
+        {{#link-to 'headline2'}}Headline 2<img src="css/images/helicopter.jpg">{{/link-to}}
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>It's not a bird or a plane.</h1>
+            <p>Better read faster.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="item">
+        {{#link-to 'headline3'}}Headline 3<img src="css/images/joe-cool.jpg">{{/link-to}}
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Too cool for school.</h1>
+            <p>Better read faster!</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="item">
+        {{#link-to 'headline4'}}Headline 4<img src="css/images/lion.jpg">{{/link-to}}
+        <div class="container">
+          <div class="carousel-caption">
+            <h1>Generic image of fierce lion.</h1>
+            <p>Too slooowww.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <a class='left carousel-control' href='#myCarousel' role='button' data-slide='prev'>
+      <span class='glyphicon glyphicon-chevron-left'>
+
+      </span>
+      <span class='sr-only'>Previous</span>
+    </a>
+    <a class='right carousel-control' href='#myCarousel' role='button' data-slide='next'>
+      <span class='glyphicon glyphicon-chevron-right'>
+
+      </span>
+      <span class='sr-only'>Next</span>
+    </a>
+  </div>
+
 </div>
