--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,23 @@
 img {
-  height: 200px;
-  width: 200px;
+  height: 400px;
+  width: 500px;
+}
+
+#right {
+  float: right;
+}
+
+.item {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#myCarousel {
+  height: auto;
+  width: auto;
 }
