--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,9 +1,11 @@
 <div class="container">
   <nav class="navbar navbar-default" role="navigation">
     <ul class="nav navbar-nav">
-      <li>{{#link-to 'headline1'}}Headline1{{/link-to}}</li>
       <li>{{#link-to 'posts'}}Posts{{/link-to}}</li>
-      <li>{{#link-to 'posts'}}Posts{{/link-to}}</li>
+      <li>{{#link-to 'about'}}About Us{{/link-to}}</li>
+      <li>{{#link-to 'contact'}}Contact Us{{/link-to}}</li>
+    </ul>
+    <ul class="nav navbar-nav" id="right">
       <li>
         <div class="dropdown">
           <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
