--- a/templates/about.hbs
+++ b/templates/about.hbs
@@ -1,3 +1,13 @@
 <p>
   We rock.
 </p>
+<button class='btn btn-primary' {{action 'iDoSomething'}}>This button does something.</button>
+
+{{#if isPictureShowing}}
+<button class='btn btn-primary' {{action 'hidePicture'}}>Hide Picture</button>
+<p>
+  <img src="css/images/cow-fire-man.jpg">
+</p>
+{{else}}
+<button class='btn btn-info' {{action 'showPicture'}}>Click to see picture</button>
+{{/if}}
